# structure

./: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose-local.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
alembic/: env.py
nginx/: nginx.conf
src/app/: __main__.py  main.py
src/app/api/: ping.py
src/app/core/: config.py  logger.py
src/app/db/: postgres.py  redis.py
src/app/models/: user.py
src/app/servises/: ping.py
tests/: conftest.py  test_add.py  test_ping.py
